--- a/blast.ipynb
+++ b/blast.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "c022dc0a-1f40-48fa-a1ab-d6fcdfd5ce65",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "f3be1478-3f9e-439d-b9d5-f74a25257d6c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "88789d2e-117d-4755-8ff1-7c2698b2d061",
    "metadata": {
     "tags": []
@@ -1979,6 +1979,7 @@
     "    handle = open(f\"blast_{file[0]}_{file[1]}.xml\")\n",
     "    blast_records = NCBIXML.parse(handle)\n",
     "    output = open(f\"homol_{file[0]}_{file[1]}.fasta\",\"a\")\n",
+    "    output.write(f\">{record.id}\\n{record.seq}\\n\\n\") # guardar a sequência de E. coli\n",
     "    e_value_threshold = 0.0001\n",
     "    counter = 1\n",
     "    titles_list = [] # \"keep track\" dos alignment.titles de modo a evitar nomes duplicados\n",
